[gd_scene load_steps=6 format=3 uid="uid://b1o3vemm21pfn"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_j5r3b"]

[sub_resource type="Animation" id="Animation_dtdrl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.647059, 0.733333, 0.819608, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vtgqi"]
resource_name = "close_menu"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Color(0.647059, 0.733333, 0.819608, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wip43"]
resource_name = "open_menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.647059, 0.733333, 0.819608, 1), Color(0.647059, 0.733333, 0.819608, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qrc7"]
_data = {
"RESET": SubResource("Animation_dtdrl"),
"close_menu": SubResource("Animation_vtgqi"),
"open_menu": SubResource("Animation_wip43")
}

[node name="MainMenu" type="ColorRect"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.647059, 0.733333, 0.819608, 1)
script = ExtResource("1_j5r3b")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 400)
offset_left = 362.0
offset_top = 100.0
offset_right = 662.0
offset_bottom = 500.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 284.0
offset_bottom = 384.0

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
offset_right = 268.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
offset_top = 41.0
offset_right = 268.0
offset_bottom = 119.0
size_flags_vertical = 3
text = "New Game"

[node name="LoadButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
offset_top = 123.0
offset_right = 268.0
offset_bottom = 202.0
size_flags_vertical = 3
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
offset_top = 206.0
offset_right = 268.0
offset_bottom = 285.0
size_flags_vertical = 3
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
offset_top = 289.0
offset_right = 268.0
offset_bottom = 368.0
size_flags_vertical = 3
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "close_menu"
libraries = {
"": SubResource("AnimationLibrary_7qrc7")
}
